--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="zh-CN"><head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>代码预览 - 快链</title>
+      <title>快递运费计算器</title>
       <style></style>
       <style>
 /* 快链水印样式 - 底部栏 */
-.kuailian-watermark {
+。kuailian-watermark {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -19,14 +19,14 @@
   font-family: 'PingFang SC', 'Helvetica Neue', Arial, sans-serif;
   backdrop-filter: blur(8px);
 }
-.kuailian-watermark a {
+。kuailian-watermark a {
   color: #333;
   text-decoration: none;
   font-weight: 500;
   transition: color 0.2s;
   opacity: 0.8;
 }
-.kuailian-watermark a:hover {
+。kuailian-watermark a:hover {
   color: #0066cc;
   opacity: 1;
 }
@@ -3688,3 +3688,4 @@
     
     
   </body><div id="sc-translator-shadow" style="all: initial;"></div></html>
+
